// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabItem> should add classes for props 1`] = `
<a
  aria-selected={true}
  className="TabItem TabItem--isActive"
  href="#"
  role="tab"
  tabIndex={0}
>
  Some tab
</a>
`;

exports[`<TabItem> should allow node type labels 1`] = `
<a
  aria-selected={false}
  className="TabItem"
  href="#"
  role="tab"
  tabIndex={0}
>
  <strong>
    Some tab
  </strong>
</a>
`;

exports[`<TabItem> should render a tab item correctly 1`] = `
<a
  aria-selected={false}
  className="TabItem"
  href="#"
  role="tab"
  tabIndex={0}
>
  Some tab
</a>
`;
